--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -66,7 +66,7 @@ h2 {
 img {
     vertical-align: bottom;
     box-align:"right";
-    width: 800px; height: 200;
+    width: 800px; height: 200px;
 }
 
 
